# mathing

./: .dockerignore  .gitignore  Cargo.toml  README.md  astro.config.mjs  docker-compose.yaml  dockerfile  drizzle.config.ts  justfile  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.mjs
.github/workflows/: ci.yaml
crates/mathing-client/: Cargo.toml
crates/mathing-client/src/: cli.rs  cli_tables.rs  errors.rs  lib.rs  main.rs
crates/mathing-client/src/user_service/: mod.rs  user_create.rs  user_delete.rs  user_edit.rs  user_get.rs  user_list.rs
crates/mathing-server/: Cargo.toml  build.rs
crates/mathing-server/.sqlx/: query-06494e200e41cd5a02850b671add1959b3311d033239cc6323fdee950556aa0e.json  query-163eaa3c70b293b3a03331616aeda61951d903fb90752e9100df870783d3b9d1.json  query-1d0131456c5f266f133178dad17ded07cf6cbe1726a218b1074e63bca4c45302.json  query-2550145aa320dad83b7154bd7cdd3c999bc25fe21e629e21555823d345bf1706.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-3327cc1335a05a65afe750d5c50c83ffb67308a1e605f9e74beee0a23c603313.json  query-3be28ad025a2f920cc2228f6453fb7da3939ae4eab6ebf413ce8f3fc661c8d7e.json  query-43ce5eab6f13bd79f02ca3f83edd0494248f90895f9cbed67fc9fdf38c48553e.json  query-5ac057f0d61c795189e8906031fe66f02143642d1d1f364d921eeaf021efe9e3.json  query-66468e2f0902badc5a6ef864c94a9069bfc21bac80be355b8e461c2fc6fd0fce.json  query-72e75aede5f15b893affe17b7da35daae96830f5d3fbe542bf04a42cd9f33d70.json  query-af4b514fc4d80d478fc1e26338e5ae73029256d2aa724b84ffaa8c609a8606ac.json  query-b3cb08a1c67b09ec8158032fe453c607753555ffcf98568a8fed36fa6a95deb4.json  query-bb26bab7df14a350eb6b586408a609fc26d07b20a46571a0ddb4ad5998e0c207.json  query-d14a7b06dae66399fd185d81e50f23539ec86ae7a11d8154a2fbaeffbc35aef9.json  query-e063ce0446f50e11047db3439cda96a7c40c75bcb51befbd56246696f1be4daa.json
crates/mathing-server/fixtures/: items.sql  users.sql
crates/mathing-server/migrations/: 20260209035508_users.sql  20260223215820_items.sql
crates/mathing-server/src/: config.rs  db_conn.rs  endpoint.rs  errors.rs  get_duplicates.rs  lib.rs  logger.rs  main.rs  offset.rs  pagination.rs  validation.rs
crates/mathing-server/src/item_service/: item_create.rs  item_delete.rs  item_edit.rs  item_get.rs  item_list.rs  item_row.rs  mod.rs
crates/mathing-server/src/user_service/: mod.rs  user_create.rs  user_delete.rs  user_edit.rs  user_get.rs  user_list.rs  user_row.rs
migrations/: 20260209035508_users.sql
nix/: devshell-ci-build.nix  devshell-ci-enter-test.nix  devshell-ci-lint.nix  devshell-ci.nix  devshell-default.nix  devshell-shared-env.nix  devshell-shared-pkgs.nix  devshell.nix  devshells.nix
proto/: item_create.proto  item_delete.proto  item_edit.proto  item_get.proto  item_list.proto  item_row.proto  item_service.proto  mathing.proto  one_of_id.proto  pagination.proto  rows_affected.proto  user_create.proto  user_delete.proto  user_edit.proto  user_get.proto  user_list.proto  user_row.proto  user_service.proto
src/components/: Button.astro  Heading.astro  Items.astro  (+2 more)
(+22 files in other folders)
