[workspace]
resolver = "3"
members = ["crates/mathing-client","crates/mathing-server"]

[workspace.dependencies]
anyhow = "1.0.101"
prost = "0.14.3"
tokio = {version = "1.49.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.14.3"
tonic-prost = "0.14.3"
tonic-prost-build = "0.14.3"
thiserror = "2.0.18"
