[package]
name = "mathing-client"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.5.57", features = ["derive"]}
anyhow = { workspace = true}
prost = {workspace = true}
thiserror =  {workspace = true}
tokio = {workspace = true}
tonic = {workspace = true}
tonic-prost = {workspace = true}
tabled = "0.20.0"

[build-dependencies]
tonic-prost-build = {workspace = true}
